# rules_rust_registry_repro

./: README.md  WORKSPACE
rust/: Cargo.toml
rust/s3lib/: BUILD.bazel  Cargo.toml
rust/warplib/: BUILD.bazel  Cargo.toml
