load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")
load("@cratesweb//:defs.bzl", "all_crate_deps")

rust_library(
    name = "s3lib",
    srcs = glob(["*.rs"]),
    visibility = ["//visibility:public"],
    deps = all_crate_deps("//rust/s3lib:Cargo.toml") + [
    ],
)

rust_test(
    name = "tests",
    crate = ":s3lib",
)
